# legacy-server-scanner

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEGAL.md  README.md  README.ru.md  README_router_policy.md  pyproject.toml
.github/workflows/: ci.yml  security.yml
examples/: home-office-router.yaml
examples/compose/: generated-from-lamp.yaml
examples/k8s/: lamp-deployment.yaml  lamp-ingress.yaml
examples/maps/: monolith-php-legacy.yaml  small-lamp-server.yaml
schema/: policy-schema.yaml
scripts/: lint.sh  perf_check.sh  security_scan.sh
src/legacy_migration_assistant/: __init__.py
src/legacy_migration_assistant/ai/: __init__.py  base.py  classifier_ai.py  compose_ai_helper.py  k8s_ai_helper.py
src/legacy_migration_assistant/core/: __init__.py  models.py  utils.py
src/legacy_migration_assistant/legacy_server_scanner/: __init__.py  classifier.py  cli.py  compose_generator.py  configs.py  cron.py  exporter.py  os_detection.py  packages.py  ports.py  services.py  topology_builder.py
src/router_policy_to_config/: __init__.py  cli.py  model.py  policy_loader.py  policy_validator.py
src/router_policy_to_config/backends/: __init__.py  (+2 more)
tests/integration/: test_end_to_end_compose_to_k8s.py  test_end_to_end_scan_to_compose.py
tests/unit/: test_ai_helpers_mock.py  test_compose_generator.py  test_compose_parser.py  test_cron_parser.py  test_k8s_generator_basic.py  test_os_detection.py  test_packages_parser.py  test_ports_parser.py  test_probes_advisor.py  test_resources_advisor.py  test_services_parser.py  test_topology_builder.py
(+8 files in other folders)
